@@ -32,9 +32,9 @@
 			</p>
 		</noscript>
 		<script type="text/javascript">		var
-			_USER_ID = "05712351020187070557",
-			_USER_NAME = "modeerf",
-			_USER_EMAIL = "modeerf.test@gmail.com",
+			_USER_ID = "{{user.user_id}}",
+			_USER_NAME = "{{user.nickname}}",
+			_USER_EMAIL = "{{user.email}}",
 			_IS_BLOGGER_USER = false,
 			_SIGNUP_TIME_SEC = 1305201533,
 			_COMMAND_TOKEN = "//tAL2_02jJAmh5VhsJzY9rA",
@@ -42,7 +42,7 @@
 			_IS_MULTILOGIN_ENABLED = true,
 			_SESSION_COOKIE_INDEX = 0,
 			_LOGIN_URL = "https://www.google.com/accounts/ServiceLogin?hl\x3den\x26nui\x3d1\x26service\x3dreader\x26continue\x3dhttps://www.google.com/reader/view/",
-			_INPUT_STREAM_ID = "user/05712351020187070557/state/com.google/reading-list",
+			_INPUT_STREAM_ID = "user/{{user.user_id}}/state/com.google/reading-list",
 			_START_TIME = new Date().getTime();
 
 			function DumpError(m) { }
@@ -795,7 +795,7 @@
 					if (q.a("1")) {
 						var Xb = {
 							d: q.a(""),
-							e: "modeerf.test@gmail.com",
+							e: "{{user.email}}",
 							sanw: q.a("1"),
 							p: "//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s96-c/photo.jpg",
 							cp: "1",
@@ -4377,7 +4377,7 @@
 		<link type="text/css" rel="stylesheet" href="/ui/scroll_large_density.css">
 		<link type="text/css" rel="stylesheet" href="/ui/scroll_medium_density.css">
 		<link type="text/css" rel="stylesheet" href="/ui/scroll_small_density.css">
-		<link rel="alternate" type="application/atom+xml" href="http://www.google.com/reader/atom/user%2F05712351020187070557%2Fstate%2Fcom.google%2Freading-list" title="modeerf&#39;s reading list in Google Reader" id="auto-discovery">
+		<link rel="alternate" type="application/atom+xml" href="http://www.google.com/reader/atom/user%2F05712351020187070557%2Fstate%2Fcom.google%2Freading-list" title="{{user.nickname}}&#39;s reading list in Google Reader" id="auto-discovery">
 	</head>
 	<body>
 		<a href="/axs" class="offscreen">Click here for ARIA enhanced Google Reader.</a>
@@ -4393,7 +4393,7 @@
 							<li class="gbt">
 								<a target="_blank" onclick="gbar.logger.il(1,{t:119});" rel="noreferrer" class="gbzt" id="gb_119" href="https://plus.google.com/u/0/?tab=yX">
 									<span class="gbtb2"></span>
-									<span class="gbts">+modeerf</span>
+									<span class="gbts">+{{user.nickname}}</span>
 								</a>
 							</li>
 							<li class="gbt">
@@ -4547,7 +4547,7 @@
 						<span class="gbtcb"></span>
 						<ol class="gbtc gbsr">
 							<li class="gbt">
-								<a class="gbgt" id="gbg6" href="https://plus.google.com/u/0/me?tab=yX" onclick="gbar.tg(event,document.getElementById('gbg4'))" tabindex="-1" aria-haspopup="true" aria-owns="gbd4"><span id="gbi4t">modeerf test</span></a>
+								<a class="gbgt" id="gbg6" href="https://plus.google.com/u/0/me?tab=yX" onclick="gbar.tg(event,document.getElementById('gbg4'))" tabindex="-1" aria-haspopup="true" aria-owns="gbd4"><span id="gbi4t">{{user.nickname}}</span></a>
 							</li>
 							<li class="gbt gbtn">
 								<a class="gbgt gbgtd gbnh gb_gbnh " id="gbg1" href="https://plus.google.com/u/0/notifications/all" title="通知" onclick="gbar.tg(event,this)" aria-haspopup="true" aria-owns="gbd1">
@@ -4582,7 +4582,7 @@
 							<li class="gbt" guidedhelpid="gbacsw">
 								<a class="gbgt gbg4p" id="gbg4" href="https://plus.google.com/u/0/me?tab=yX" onclick="gbar.tg(event,this)" aria-haspopup="true" aria-owns="gbd4">
 									<span id="gbgs4">
-										<img id="gbi4i" width="27" height="27" onerror="window.gbar&&gbar.pge?gbar.pge():this.loadError=1;" src="//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s27-c/photo.jpg" alt="modeerf test">
+										<img id="gbi4i" width="27" height="27" onerror="window.gbar&&gbar.pge?gbar.pge():this.loadError=1;" src="//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s27-c/photo.jpg" alt="{{user.nickname}}">
 										<img id="gbi4ip" style="display: none">
 										<span id="gbi4id" style="display: none"></span>
 										<span class="gbmai"></span>
@@ -4596,7 +4596,7 @@
 											<div id="gbmpiw">
 												<a target="_blank" class="gbmpiaa gbp1" onclick="gbar.logger.il(10,{t:146})" href="https://plus.google.com/u/0/me?tab=yX">
 													<span id="gbmpid" style="display: none"></span>
-													<img id="gbmpi" width="96" height="96" onerror="window.gbar&&gbar.ppe?gbar.ppe():this.loadError=1;" src="//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s27-c/photo.jpg" alt="modeerf test">
+													<img id="gbmpi" width="96" height="96" onerror="window.gbar&&gbar.ppe?gbar.ppe():this.loadError=1;" src="//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s27-c/photo.jpg" alt="{{user.nickname}}">
 												</a>
 												<span id="gbmpicb">
 													<span class="gbxv">Change photo</span>
@@ -4604,8 +4604,8 @@
 												<a href="https://plus.google.com/u/0/me?tab=yX" id="gbmpicp" onclick="gbar.i.e(event)">Change photo</a>
 											</div>
 											<div class="gbpc">
-												<span id="gbmpn" class="gbps" onclick="gbar.logger.il(10,{t:69})">modeerf test</span>
-												<span class="gbps2">modeerf.test@gmail.com</span>
+												<span id="gbmpn" class="gbps" onclick="gbar.logger.il(10,{t:69})">{{user.nickname}}</span>
+												<span class="gbps2">{{user.email}}</span>
 												<div class="gbmlbw">
 													<a target="_blank" id="gb_156" onclick="gbar.logger.il(10,{t:156})" href="https://www.google.com/accounts/b/0/ManageAccount" class="gbmlb">Account</a>&ndash;<a target="_blank" onclick="gbar.logger.il(10,{t:156})" href="https://www.google.com/settings/privacy?tab=4" class="gbmlb">Privacy</a>
 												</div>
@@ -4618,11 +4618,11 @@
 													<div id="gbmpm_0" class="gbmtc gbp0">
 														<a rel="noreferrer" target="_blank" id="gbmpm_0_l" href="/view/user%2F-%2Flabel%2FLevel1?authuser=0" class="gbmt">
 															<span class="gbmpiaw gbxv">
-																<img class="gbmpia" width="48" height="48" onerror="window.gbar&&gbar.pae?gbar.pae(this):this.loadError=1;" data-asrc="//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s48-c/photo.jpg" alt="modeerf test">
+																<img class="gbmpia" width="48" height="48" onerror="window.gbar&&gbar.pae?gbar.pae(this):this.loadError=1;" data-asrc="//lh6.googleusercontent.com/-Dly5kqX8NC8/AAAAAAAAAAI/AAAAAAAAAAA/ydQjflxA17Q/s48-c/photo.jpg" alt="{{user.nickname}}">
 															</span>
 															<span class="gbmpnw">
-																<span class="gbps">modeerf test</span>
-																<span class="gbps2">modeerf.test@gmail.com</span>
+																<span class="gbps">{{user.nickname}}</span>
+																<span class="gbps2">{{user.email}}</span>
 															</span>
 														</a>
 													</div>
@@ -4640,7 +4640,7 @@
 													<a target="_blank" role="button" href="https://www.google.com/accounts/AddSession?service=reader&continue=https://www.google.com/reader/view/user%252F-%252Flabel%252FLevel1" class="gbqfbb">Add account</a>
 												</td>
 												<td class="gbmpalb">
-													<a target="_top" role="button" id="gb_71" onclick="gbar.logger.il(9,{l:'o'})" href="https://www.google.com/accounts/Logout?service=reader&continue=https://www.google.com/reader/view/user%252F-%252Flabel%252FLevel1" class="gbqfbb">Sign out</a>
+													<a target="_top" role="button" id="gb_71" onclick="gbar.logger.il(9,{l:'o'})" href="{{logout_url}}" class="gbqfbb">Sign out</a>
 												</td>
 											</tr>
 										</table>
@@ -4649,7 +4649,7 @@
 							</li>
 							<noscript>
 								<li class="gbt">
-									<a id="gbg7" href="https://www.google.com/accounts/Logout?service=reader&continue=https://www.google.com/reader/view/user%252F-%252Flabel%252FLevel1" class="gbgt">
+									<a id="gbg7" href="{{logout_url}}" class="gbgt">
 										<span class="gbgs">
 											<span class="gbit">Sign out</span>
 										</span>
@@ -4684,7 +4684,7 @@
 				<h1 id="logo"><span>Google Reader</span></h1>
 			</a>
 			<div id="search">
-				<input id="search-input" class="jfk-textinput" type="text" title="&quot;search your feeds&quot;">
+				<input id="search-input" class="jfk-textinput" type="text" title="&quot;search your feeds&quot;" />
 			</div>
 		</div>
 		<script type="text/javascript">
@@ -4724,15 +4724,14 @@
 			<p style="font-size: larger; margin: 40px 0">This is taking longer than usual.<a href="/"><b>Try reloading the page</b></a>。</p>
 			<div>If that doesn't work, you can:
 				<ol>
-					<li>Try <a href="https://www.google.com/accounts/Logout?hl=en&nui=1&service=reader&continue=https://www.google.com/reader/">logging out</a>.</li>
+					<li>Try <a href="{{logout_url}}">logging out</a>.</li>
 					<li>Clear your <a href="http://maps.google.com/support/bin/answer.py?hl=en&answer=16539" target="_blank">browser cache</a> and try again.</li>
 					<li>For more troubleshooting tips, visit the <a href="http://www.google.com/support/reader/bin/answer.py?hl=en&answer=70663" target="_blank">help center</a>.</li>
 				</ol>
 			</div>
 		</div>
 		<div id="viewer-details-template" class="hidden">
-			<div class="viewer-details-stats-container">
-			</div>
+			<div class="viewer-details-stats-container"></div>
 			<div class="viewer-details-charts">
 				<div class="tab-group">
 					<div class="tab-group-headers">
@@ -4955,13 +4954,13 @@
 				"";
 				var _STREAM_LIST_TAGS = {
 					tags: [{
-						id: "user/05712351020187070557/state/com.google/starred",
+						id: "user/{{user.user_id}}/state/com.google/starred",
 						sortid: "A1E6F198"
 					}, {
-						id: "user/05712351020187070557/state/com.google/broadcast",
+						id: "user/{{user.user_id}}/state/com.google/broadcast",
 						sortid: "37F067E6"
 					}, {
-						id: "user/05712351020187070557/state/com.blogger/blogger-following",
+						id: "user/{{user.user_id}}/state/com.blogger/blogger-following",
 						sortid: "1D57C4E9"
 					}]
 				};
@@ -4969,7 +4968,7 @@
 				var _STREAM_LIST_UNREAD_COUNTS = {
 					max: 1000,
 					unreadcounts: [{
-						id: "user/05712351020187070557/state/com.google/reading-list",
+						id: "user/{{user.user_id}}/state/com.google/reading-list",
 						count: 598
 					}, {
 						id: "feed/http://www.dapenti.com/blog/rssfortugua.asp",
