@@ -1,6 +1,12 @@
 
+TODO:
+	profile photo url
+
+
 
 2013.7.8	K.L.	<k.l.lambda@gmail.com>
+
+	+	ReaderGAE\Source\templates\View.html: user id from google user server added.
 
 	>	ReaderGAE\Source\templates\View.html: replaced Chinese characters.
 
